--- a/gto/src/main/resources/templates/signup.html
+++ b/gto/src/main/resources/templates/signup.html
@@ -18,12 +18,14 @@
                 <div th:if="${param.logout}">
                     You have been logged out.
                 </div>
-                <label for="inputUsername" class="sr-only">Username</label>
-                <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Username" required="" />
+                <label for="inputEmail" class="sr-only">Email</label>
+                <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email" required="" />
                 <label for="inputPassword" class="sr-only">Password</label>
                 <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required="" />
-                <label for="inputFullname" class="sr-only">Full Name</label>
-                <input type="text" name="fullname" id="inputEmail" class="form-control" placeholder="Fullname" required="" />
+                <label for="inputUsername" class="sr-only">Username</label>
+                <input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required="" />
+                <label for="inputUsername" class="sr-only">Phone Number</label>
+                <input type="text" name="phoneNum" id="inputPhoneNum" class="form-control" placeholder="Phone Number" required="" />
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
             </form>
             <form class="form-signin" th:action="@{/login}" method="get">
